--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 </div>
             </div>
             <div class="letter">
+                <div id="message">
+                    <p>We are delighted to invite you to witness and celebrate our marriage.<br>#JhoaniSaysYesOnur</p>
+                </div>
                 <div class="Love "></div>
                 <div class="Love"></div>
                 <div class="Love"></div>
